Adding more practices.

--- a/_includes/v2/sidenav-practices.html
+++ b/_includes/v2/sidenav-practices.html
@@ -24,12 +24,12 @@
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/assumptions_tracker">
+                      <a href="{{ site.baseurl }}/v2/practices/assumptions_tracker">
                           Assumptions Tracker
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/atomic_design">
+                      <a href="{{ site.baseurl }}/v2/practices/atomic_design">
                           Atomic Design
                       </a>
                   </li>
@@ -39,112 +39,112 @@
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/client_check_in">
+                      <a href="{{ site.baseurl }}/v2/practices/client_check_in">
                           Client Check In
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/contextual_inquiry">
+                      <a href="{{ site.baseurl }}/v2/practices/contextual_inquiry">
                           Contextual Inquiry
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/daily_standup">
+                      <a href="{{ site.baseurl }}/v2/practices/daily_standup">
                           Daily Standup
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/delivering_product">
+                      <a href="{{ site.baseurl }}/v2/practices/delivering_product">
                           Delivering Product
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/derisking">
+                      <a href="{{ site.baseurl }}/v2/practices/derisking">
                           Derisking
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/dot_voting">
+                      <a href="{{ site.baseurl }}/v2/practices/dot_voting">
                           Dot Voting
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/dump_and_sort">
+                      <a href="{{ site.baseurl }}/v2/practices/dump_and_sort">
                           Dump and Sort
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/backlog">
+                      <a href="{{ site.baseurl }}/v2/practices/backlog">
                           Backlog
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/group_interview">
+                      <a href="{{ site.baseurl }}/v2/practices/group_interview">
                           Group Interview
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/group_sketching">
+                      <a href="{{ site.baseurl }}/v2/practices/group_sketching">
                           Group Sketching
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/immersion">
+                      <a href="{{ site.baseurl }}/v2/practices/immersion">
                           Immersion
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/iteration_planning">
+                      <a href="{{ site.baseurl }}/v2/practices/iteration_planning">
                           Iteration Planning
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/journey_maps">
+                      <a href="{{ site.baseurl }}/v2/practices/journey_maps">
                           Journey Maps
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/pairing_on_demand">
+                      <a href="{{ site.baseurl }}/v2/practices/pairing_on_demand">
                           Pairing on Demand
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/person_focused_culture">
+                      <a href="{{ site.baseurl }}/v2/practices/person_focused_culture">
                           Person Focused Culture
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/personas">
+                      <a href="{{ site.baseurl }}/v2/practices/personas">
                           Personas
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/popcorn_scripting">
+                      <a href="{{ site.baseurl }}/v2/practices/popcorn_scripting">
                           Popcorn Scripting
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/problem_defintion">
+                      <a href="{{ site.baseurl }}/v2/practices/problem_defintion">
                           Problem Defintion
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/prototyping">
+                      <a href="{{ site.baseurl }}/v2/practices/prototyping">
                           Prototyping
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/publishing-software">
+                      <a href="{{ site.baseurl }}/v2/practices/publishing-software">
                           Publishing Software
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/responsive_design">
+                      <a href="{{ site.baseurl }}/v2/practices/responsive_design">
                           Responsive Design
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/retrospective">
+                      <a href="{{ site.baseurl }}/v2/practices/retrospective">
                           Retrospective
                       </a>
                   </li>
@@ -154,32 +154,32 @@
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/self-organizing_teams">
+                      <a href="{{ site.baseurl }}/v2/practices/self-organizing_teams">
                           Self-Organizing Teams
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/service_blueprints">
+                      <a href="{{ site.baseurl }}/v2/practices/service_blueprints">
                           Service Blueprints
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/sizing">
+                      <a href="{{ site.baseurl }}/v2/practices/sizing">
                           Sizing
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/spiking">
+                      <a href="{{ site.baseurl }}/v2/practices/spiking">
                           Spiking
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/stack_ranking">
+                      <a href="{{ site.baseurl }}/v2/practices/stack_ranking">
                           Stack Ranking
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/storyboard">
+                      <a href="{{ site.baseurl }}/v2/practices/storyboard">
                           Storyboard
                       </a>
                   </li>
@@ -189,7 +189,7 @@
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/UI/visual_design">
+                      <a href="{{ site.baseurl }}/v2/practices/UI/visual_design">
                           UI/Visual Design
                       </a>
                   </li>
@@ -204,7 +204,7 @@
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/wireframing">
+                      <a href="{{ site.baseurl }}/v2/practices/wireframing">
                           Wireframing
                       </a>
                   </li>
