Move to using data files for pretty much everything v2.

--- a/_layouts/v2/default.html
+++ b/_layouts/v2/default.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../assets/img/v2/favicons/favicon.ico">
+    <link rel="icon" href="{{ site.baseurl }}/assets/img/favicons/favicon.ico">
 
     <title>DID(it) Playbook</title>
 
