--- a/_includes/v2/footer.html
+++ b/_includes/v2/footer.html
@@ -3,6 +3,6 @@
     <div class="float-right">
       <a href="#scroll-top">Back to top</a>
     </div>
-    <div>The DID(it) Playbook is a project of U.S. Citizen and Immigration Services, maintained by the Digital Innovation & Development Program.</div>
+    <div>{{ site.data.footer.text }} </div>
   </div>
 </footer>
