--- a/_includes/v2/header.html
+++ b/_includes/v2/header.html
@@ -1,6 +1,6 @@
 <header class="sticky-top custom-bkg-white" id="scroll-top">
   <div class="container">
-    <a class="navbar-brand ml-2" href="{{ site.baseurl }}/v2/index">DID(it) Playbook</a>
+    <a class="navbar-brand ml-2" href="{{ site.baseurl }}/v2/{{ site.data.header.brand.url }}">{{ site.data.header.brand.title }}</a>
   </div>
 
   <nav class="navbar navbar-expand-sm navbar-light">
@@ -10,21 +10,18 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/v2/players">Players</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/v2/playlist">Playlist</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/v2/practices">Practices</a>
-          </li>
+          {% for item in site.data.header.left_nav %}
+            <li class="nav-item">
+                <a class="nav-link" href="{{ site.baseurl }}/v2/{% include v2/to_url.html title=item.title %}">{{ item.title }}</a>
+            </li>
+         {% endfor %}
         </ul>
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/v2/about">About DID(it)</a>
-          </li>
-        </ul>
+          {% for item in site.data.header.right_nav %}
+            <li class="nav-item">
+                <a class="nav-link" href="{{ site.baseurl }}/v2/{{ item.url }}">{{ item.title }}</a>
+            </li>
+         {% endfor %}
       </div>
     </div>
   </nav>
