--- a/_includes/v2/sidenav.html
+++ b/_includes/v2/sidenav.html
@@ -1,4 +1,13 @@
 <div class="col-md-3">
+  {% assign url_parts = page.url | split: '/' %}
+  {% assign url_parts_size = url_parts | size %}
+  {% assign rm = url_parts | last | append: '/' %}
+  {% assign base_url = page.url | replace: rm %}
+  {% if base_url == '/v2/' %}
+    {% assign base_url = base_url | append: rm %}
+  {% endif %}
+  {% assign root = base_url | split: '/' | last %}
+
   <nav class="navbar navbar-expand-sm navbar-light mb-5">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sidenav" aria-controls="sidenav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -6,26 +15,20 @@
     <div class="collapse navbar-collapse" id="sidenav">
       <ul class="custom-sidenav-list">
         <li>
-          <a href="{{ site.baseurl }}/v2/{{include.menu.url }}" class="custom-current">{{ include.menu.title }}</a>
+          <a href="{{ site.baseurl }}/v2/{{ root }}" class="custom-current">{{ root | capitalize }}</a>
         </li>
-        {% if include.menu.children And include.menu.children != "" And include.menu.children != nil %}
-          <ul class="custom-sidenav-sub_list">
-            {% for menu_item_level1 in include.menu.children %}
-              <li>
-                <a href="{{ site.baseurl }}/v2/{{include.menu.url }}/{% include v2/to_url.html title=menu_item_level1.title %}">{{ menu_item_level1.title }}</a>
-              </li>
-              {% if menu_item_level1.children And menu_item_level1.children != "" And menu_item_level1.children != nil %}
-                <ul class="custom-sidenav-sub_list">
-                  {% for menu_item_level2 in menu_item_level1.children %}
-                    <li>
-                      <a href="{{ site.baseurl }}/v2/{{include.menu.url }}/{% include v2/to_url.html title=menu_item_level2.title %}">{{ menu_item_level2.title }}</a>
-                    </li>
-                  {% endfor %}
-                </ul>
+        <ul class="custom-sidenav-sub_list">
+          {% for node in site.pages %}
+            {% if node.url contains base_url %}
+              {% assign node_url_parts = node.url | split: '/' %}
+              {% assign node_url_parts_size = node_url_parts | size %}
+              {% assign filename = node_url_parts | last %}
+              {% if url_parts_size <= node_url_parts_size and filename != 'index.html' and filename != 'players' and filename != 'practices' and filename != 'playlist' %}
+                <li><a href='{{ site.baseurl }}{{node.url}}'>{{ node.title | split: ' - ' | last }}</a></li>
               {% endif %}
-            {% endfor %}
-          </ul>
-        {% endif %}
+            {% endif %}
+          {% endfor %}
+        </ul>
       </ul>
     </div>
   </nav>
