--- a/_includes/v2/related.html
+++ b/_includes/v2/related.html
@@ -4,13 +4,15 @@
   {% endunless %}
   <div class="row">
     {% for item in include.related %}
+      {% assign formatted_item = item | replace: " ", "_" | replace: "/", "_" | remove: "," | remove: "'" | downcase %}
+      {% assign tile_item = site.data.tiles[formatted_item] %}
       <div class="col-md-3 mb-4">
         <div class="card">
-          <img class="card-img-top" src="{{ site.baseurl }}/assets/img/v2/icons/{{ item.image.filename }}" alt="{{ item.image.alt }}">
+          <img class="card-img-top" src="{{ site.baseurl }}/assets/img/v2/icons/{{ tile_item.image.filename }}" alt="{{ tile_item.image.alt }}">
           <div class="card-body">
-            <h5 class="card-title text-center">{{ item.title }}</h5>
+            <h5 class="card-title text-center">{{ tile_item.title }}</h5>
           </div>
-          <a class="card-footer text-center" href="{{ site.baseurl }}/v2/plays/{% include v2/to_url.html title=item.title %}">Read more <span class="sr-only">about {{ item.title }}</span></a>
+          <a class="card-footer text-center" href="{{ site.baseurl }}/v2/{{tile_item.root}}/{% include v2/to_url.html title=tile_item.title %}">Read more <span class="sr-only">about {{ tile_item.title }}</span></a>
         </div>
       </div>
     {% endfor %}
