Refactoring more stuff out into common includes.

--- a/_layouts/v2/players.html
+++ b/_layouts/v2/players.html
@@ -1,52 +1,6 @@
 ---
 layout: v2/default
 ---
-<div class="container mt-5">
-  <!-- .row -->
-  <div class="row">
-    {% assign player = page.url | split: '/' | last | split: '.' | first %}
-    {% include v2/sidenav.html %}
-    <!-- .main -->
-    <main role="main" class="col-md-9">
-      <!-- hero -->
-      {% assign hero = site.data.players[player].hero %}
-      {% include v2/hero.html hero=hero %}
-      <!-- /.hero -->
-      <!-- .steps -->
-      <section class="mb-5">
-        <div class="mb-4">
-          <p>
-              {{ site.data.players[player].summary }}
-          </p>
-        </div>
-        <h2 class="mb-4">Primary Responsibilities</h2>
-        <div class="form-check mb-3">
-          {% for item in site.data.players[player].responsibilities %}
-            <div class="custom-control custom-checkbox">
-              <input class="custom-control-input" type="checkbox" unchecked>
-              <label class="custom-control-label">
-                    <b>{{ item.title }}</b>
-                    <p>{{ item.text }}</p>
-              </label>
-            </div>
-          {% endfor %}
-        </div>
-      </section>
-      <!-- /.steps -->
-      <!-- .resources -->
-      {% if site.data.players[player].resources %}
-        {% assign resources = site.data.players[player].resources %}
-        {% include v2/resources.html resources=resources %}
-      {% endif %}
-      <!-- /.resources -->
-      <!-- .tiles -->
-      {% if site.data.players[player].related %}
-        {% assign related = site.data.players[player].related %}
-        {% include v2/related.html related=related %}
-      {% endif %}
-      <!-- /.tiles -->
-    </main>
-    <!-- /.main -->
-  </div>
-  <!-- /.row -->
-</div>
+{% assign player = page.url | split: '/' | last | split: '.' | first %}
+{% assign content = site.data.players[player] %}
+{% include v2/content.html content=content steps_title='Primary Responsibilities' %}
