--- a/_layouts/v2/plays.html
+++ b/_layouts/v2/plays.html
@@ -1,71 +1,6 @@
 ---
 layout: v2/default
 ---
-<div class="container mt-5">
-  <!-- .row -->
-  <div class="row">
-    {% assign play = page.url | split: '/' | last | split: '.' | first %}
-    {% include v2/sidenav.html %}
-    <!-- .main -->
-    <main role="main" class="col-md-9">
-      <!-- hero -->
-      {% assign hero = site.data.plays[play].hero %}
-      {% include v2/hero.html hero=hero %}
-      <!-- /.hero -->
-      <!-- .steps -->
-      <section class="mb-5">
-        <div class="mb-4">
-          <p>{{ site.data.plays[play].description }}</p>
-        </div>
-        <h2 class="mb-4">Steps</h2>
-        <div class="form-check mb-3">
-          {% for item in site.data.plays[play].steps %}
-            <div class="custom-control custom-checkbox">
-              <input class="custom-control-input" type="checkbox" unchecked>
-              <label class="custom-control-label">
-                <b>{{ item.title }}</b>
-                <p>{{ item.text }}</p>
-                {% if item.image %}
-                  <img class="align-self-center custom-lg-img mr-5" src="{{ site.baseurl }}/assets/img/v2/icons/{{ item.image.filename }}" alt="{{ item.image.alt }}">
-                {% endif %}
-              </label>
-            </div>
-          {% endfor %}
-        </div>
-      </section>
-      <!-- /.steps -->
-      <!-- .banner -->
-      {% if site.data.plays[play].banner %}
-      <section class="mb-5">
-        <div class="custom-primary-lightest pt-3">
-          <div class="media pl-5">
-            <img class="custom-lg-img mr-5" src="{{ site.baseurl }}/assets/img/v2/icons/{{ site.data.plays[play].banner.image.filename }}" alt="{{ site.data.plays[play].banner.image.alt }}">
-            <div class="media-body pt-5">
-              <h5 class="mb-3">Download the {{ site.data.plays[play].banner.title }}</h5>
-              <a href="{{ site.baseurl }}/v2/docs/{{ site.data.plays[play].banner.filename }}" class="btn btn-primary" role="button" target="_blank">
-                Download
-                <span class="sr-only">the {{ site.data.plays[play].banner.title }}</span>
-              </a>
-            </div>
-          </div>
-        </div>
-      </section>
-      {% endif %}
-      <!-- /.banner -->
-      <!-- .resources -->
-      {% if site.data.plays[play].resources %}
-        {% assign resources = site.data.plays[play].resources %}
-        {% include v2/resources.html resources=resources %}
-      {% endif %}
-      <!-- /.resources -->
-      <!-- .tiles -->
-      {% if site.data.plays[play].related %}
-        {% assign related = site.data.plays[play].related %}
-        {% include v2/related.html related=related %}
-      {% endif %}
-      <!-- /.tiles -->
-    </main>
-    <!-- /.main -->
-  </div>
-  <!-- /.row -->
-</div>
+{% assign play = page.url | split: '/' | last | split: '.' | first %}
+{% assign content = site.data.plays[play] %}
+{% include v2/content.html content=content steps_title='Steps' %}
