--- a/assets/css/v2/bootstrap-custom.css
+++ b/assets/css/v2/bootstrap-custom.css
@@ -76,14 +76,16 @@ table > tbody > tr > td > a:hover {
 }
 
 .card-footer {
-  padding: 0.75rem 1.0rem;
-  background-color: var(--content-white);
-  border-top: 1px solid var(--content-lighter);
+    min-height: 4.5rem;
+    padding: 0.75rem 1.0rem;
+    background-color: var(--content-white);
+    border-top: 1px solid var(--content-lighter);
 }
 
 .card-footer:hover {
-    background-color: var(--content-lighter);;
-    border-color: var(--content-lighter);;
+    color: var(--content-white);
+    background-color: var(--secondary-base);
+    border-color: var(--secondary-base);
 }
 
 
@@ -143,6 +145,17 @@ table > tbody > tr > td > a:hover {
 header > nav {
     border-top: 1px solid var(--content-lighter);
     border-bottom: 1px solid var(--content-lighter);
+}
+
+/***************** bootstrap badge *****************/
+
+.badge {
+  padding: 0.25em 0.65em;
+}
+
+.badge-primary {
+  color: var(--content-white);
+  background-color: var(--primary-base);
 }
 
 /***************** 75 characters max on desktop *****************/
