--- a/_layouts/v2/plays.html
+++ b/_layouts/v2/plays.html
@@ -3,4 +3,4 @@ layout: v2/default
 ---
 {% assign play = page.url | split: '/' | last | split: '.' | first %}
 {% assign content = site.data.plays[play] %}
-{% include v2/content.html content=content steps_title='Steps' %}
+{% include v2/content.html content=content steps_title='Steps' topic='Plays' %}
