--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="{{ site.baseurl }}/assets/img/favicons/favicon.ico">
 
-    <title>DID(it) Playbook</title>
+    <title>KPS Playbook</title>
 
     <link href="{{ site.baseurl }}/assets/css/bootstrap.css" rel="stylesheet">
     <link href="{{ site.baseurl }}/assets/css/bootstrap-custom.css" rel="stylesheet">
