--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,7 @@
 <header class="sticky-top custom-bkg-white" id="scroll-top">
   <div class="container">
-    <a class="navbar-brand ml-2" href="{{ site.baseurl }}/{{ site.data.header.brand.url }}">{{ site.data.header.brand.title }}</a>
+    <a class="navbar-brand ml-2" href="{{ site.baseurl }}/{{ site.data.header.brand.url }}">
+      <img class="img-fluid" src="{{ site.baseurl }}/assets/img/knight.png" alt="team picture">{{ site.data.header.brand.title }}</a>
   </div>
 
   <nav class="navbar navbar-expand-sm navbar-light">
