--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="{{ site.baseurl }}/assets/img/favicons/favicon.ico">
+    <link rel="icon" href="{{ site.baseurl }}/assets/img/favicons/favicon.png">
 
     <title>KPS Playbook</title>
 
@@ -15,7 +15,6 @@
   <body>
     {% include header.html %}
     {{ content }}
-    {% include footer.html %}
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
