--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="sticky-top custom-bkg-white" id="scroll-top">
   <div class="container">
     <a class="navbar-brand ml-2" href="{{ site.baseurl }}/{{ site.data.header.brand.url }}">
-      <img style="height: 50px;" src="{{ site.baseurl }}/assets/img/knight.png" alt="logo">{{ site.data.header.brand.title }}</a>
+      <img style="height: 50px; margin-right: 20px;" src="{{ site.baseurl }}/assets/img/knight.png" alt="logo">{{ site.data.header.brand.title }}</a>
   </div>
 
   <nav class="navbar navbar-expand-sm navbar-light">
